; ModuleID = '/home/carl/AnghaBench/RetroArch/input/drivers_joypad/extr_psp_joypad.c_psp_joypad_get_buttons.c'
source_filename = "/home/carl/AnghaBench/RetroArch/input/drivers_joypad/extr_psp_joypad.c_psp_joypad_get_buttons.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@DEFAULT_MAX_PADS = common dso_local global i32 0, align 4
@pad_state = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32*)* @psp_joypad_get_buttons to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @psp_joypad_get_buttons(i32 %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  store i32 %0, i32* %3, align 4
  store i32* %1, i32** %4, align 8
  %5 = load i32, i32* %3, align 4
  %6 = load i32, i32* @DEFAULT_MAX_PADS, align 4
  %7 = icmp ult i32 %5, %6
  br i1 %7, label %8, label %16

8:                                                ; preds = %2
  %9 = load i32*, i32** %4, align 8
  %10 = load i32*, i32** @pad_state, align 8
  %11 = load i32, i32* %3, align 4
  %12 = zext i32 %11 to i64
  %13 = getelementptr inbounds i32, i32* %10, i64 %12
  %14 = load i32, i32* %13, align 4
  %15 = call i32 @BITS_COPY16_PTR(i32* %9, i32 %14)
  br label %19

16:                                               ; preds = %2
  %17 = load i32*, i32** %4, align 8
  %18 = call i32 @BIT256_CLEAR_ALL_PTR(i32* %17)
  br label %19

19:                                               ; preds = %16, %8
  ret void
}

declare dso_local i32 @BITS_COPY16_PTR(i32*, i32) #1

declare dso_local i32 @BIT256_CLEAR_ALL_PTR(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
